# Abstract_Learning

./: .gitignore  CMakeLists.txt  Hmacro.py  Learn.xml  Map-Reduce.xml  README.txt  UpthreadLabeld.h  a1a.model  a1a.predict  a1a.tra  backup_qr.cpp  bao.txt  bao2.txt  bao_normal.txt  bao_predict.txt  bao_predict_normal.txt  bitebi.txt  cnn_parallel.py  cnn_single.py  config.txt  config_linux.txt  createFile.py  data_eco.txt  doc.txt  example.cpp  example.py  example2.py  gmm_test_speed.cpp  gp_test.cpp  libAbstract_learning.xml  logical.cpp  machine.sh  machine_learning_test.cpp  main.cpp  make_model_simple3d.cpp  normalizer.py  rf_train.py  splitData.py  struct.txt  tree_model.xml  (+1 more)
cmake/Modules/: FindvecLib.cmake
cpptools/: matrix_tools.cpp
data/: lstm.numbers
data/t10k/: test_x.txt  test_y.txt  train_x.txt
doc/latex/: 1.tex
doc/pics/: Frame.dia  Frame.eps  algorithm.dia  algorithm.eps
include/: ALHead.h
include/compose/: ALClassifierSet.h  ALComposeClassifier.h  ALRandomForestMatrix.h  ALTransformMatrixPredictor.h
include/core/: ALARStructure.h  ALBasicExpander.h  ALExpanderFactory.h  ALFloatData.h  ALFloatDataChain.h  ALFloatDefine.h  ALIExpander.h  ALILabeldMethod.h  ALLabeldMethodFactory.h  ALNormalizer.h
include/data/: ALVaryArray.h  ALVaryArrayMatrix.h
include/learn/: ALCGPRegressor.h  ALCNNLearner.h  ALDecisionTree.h  ALDiscreteC45Tree.h  ALDivider.h  ALGMM.h  ALGMMClassify.h  ALIChainLearner.h  ALISuperviseLearner.h  ALIUnSuperLearner.h  ALKMeans.h  ALLearnFactory.h  ALLogicalRegress.h  ALMatrixNormalizer.h  ALMatrixSelector.h  ALNaiveBayesianLearner.h  ALNetRegressor.h  ALPCABasic.h  ALRNNLearner.h  ALRegressor.h  ALSVM.h  ALSVMHandleFactory.h  ALSVMKernelFactory.h  ALSVMLearner.h  ALSVMPreditor.h  ALSpectralClustering.h  ALStepRegressor.h  ALVaryArrayLearner.h
include/loader/: ALILoader.h  ALStandardLoader.h
include/lowlevelAPI/: GPTypes.h
include/math/: AL3DMatrix.h  ALFloatMatrix.h  ALGradientDown.h  ALIGradientDecent.h  ALIMatrix4DOp.h  ALIMatrixTransformer.h  ALPolynomial.h  ALStatistics.h  ALUCharMatrix.h
include/opencl/: ALOpenCL.h
include/package/: ALPackage.h  DefaultFunctionTable.h
include/utils/: ALAutoFile.h  ALAutoStorage.h  ALClock.h  ALDebug.h  ALDefer.h  (+8 more)
jni/: Android.mk
opencl/: filter.cl
test/: ALAL3DMatrixTest.cpp  ALCGPRegressorTest.cpp  ALCNNClassifyTest.cpp  ALClassifierSetTest.cpp  ALCrossValidateTest.cpp  ALDecitionTreeTest.cpp  ALDecitonTreeChainTest.cpp  ALDividerTest.cpp  ALEvolutionTest.cpp  ALGMMClassifyTest.cpp  ALGMMTest.cpp  ALKMeansTest.cpp  ALLargeMatrixTest.cpp  ALLoadDataTest.cpp  ALLogicalRegressTest.cpp  ALMatrixOpTest.cpp  ALMatrixTest.cpp  ALNaiveBayesianTest.cpp  ALNetRegressorTest.cpp  ALNormalizeTest.cpp  ALPCATest.cpp  ALPolyTest.cpp  ALRandomForestMatrixTest.cpp  ALRegressAR2Test.cpp  ALRegressTest.cpp  ALSVMTest.cpp  ALSpectrumClusterTest.cpp  ALStandardLoaderTest.cpp  ALStasticTest.cpp  ALStepRegressorTest.cpp  ALStreamReaderTest.cpp  ALUCharMatrixTest.cpp  ALVaryArrayTest.cpp  GPTest.cpp  GenerateTest.py
tools/: Hmacro.py  matrix_tools.cpp
(+158 files in other folders)
